Added SEO keywrods and description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <link rel="icon" href="src/assets/icon_fin.png" width="10px">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Philip Gullberg</title>
+
+    <meta
+      name="title"
+      content="Philip Gullberg | Web Developer & Designer" />
+      
+    <meta
+      name="description"
+      content="Welcome to Philip’s portfolio. Explore my web development projects and design expertise, and contact me to collaborate on your next idea."
+    />
+    <meta
+      name="keywords"
+      content="Philip, portfolio, web development, frontend, backend, design, SEO, Vue, JavaScript, developer, coding"
+    />
+    <meta name="author" content="Philip" />
+
     <link
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
   rel="stylesheet"
